--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,15 @@ body, h1, h2, h3, h4, p {
     margin: 0;
 }
 
+p {
+    font-family: Merriweather;
+}
+
 header {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: relative;
 }
 
 nav {
@@ -18,7 +23,46 @@ nav {
     width: 20px;
     height: 20px;
 }
+
+.logo {
+    max-height: 40px;
+}
 /*I don't get why above a certain width, my hamburger and search icons disappear. Need to investigate. */
+
+.search-bar-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: white;
+    padding: 10px 5px 0 0 ;
+    opacity: 0;
+    transform: translateY(-100%);
+    transition: all 0.5s ease-in-out;
+}
+
+.search-bar-container input {
+    border: none;
+    /* border-bottom: 1px solid black; */
+    font-family: Merriweather;
+    padding: 0;
+    line-height: 1.6;
+    width: 250px;
+}
+
+.search-bar-container svg {
+    height: 10px;
+    width: 10px;
+}
+
+.search-icon {
+    display: flex;
+    position: relative;
+}
+
+.search-open {
+    opacity: 1;
+    transform: translateY(0%);
+} 
 
 .hero-container {
     background-image:linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.4)), url(https://fastly.picsum.photos/id/206/2880/1800.jpg?hmac=qqtAE4icI-2Tkxgul5jrduIkZu3JtmvLqpOIwLhzYZA);
@@ -78,12 +122,22 @@ aside .quote-citation {
 }
 
 .about-three-container {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 2em;
     max-width: 550px;
     justify-content: center;
     margin: auto;
     padding-bottom: 50px;
 }
+ @media (min-width: 850px) {
+    .about-three-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        max-width: 750px;
+    }
+ }
+
 .about-indiv-container {
     display: flex;
 }
@@ -126,17 +180,26 @@ aside .quote-citation {
     box-shadow: 3px 3px 5px 1px rgba(0, 0, 0, 0.2);
 }
 
+.article-italics {
+    font-style: italic;
+}
+
 .article-indiv-item img {
     width: 100%;
 }
 
 h4 {
     font-family: Alegreya;
-    font-size: 1.5em;
+    font-size: 2em;
+    padding-bottom: 0.5em;
+}
+a {
+    text-decoration: none;
+    color: black;
 }
 
 .article-heading {
-    padding: 4px;
+    padding: 10px 15px;
 }
 
 button {
@@ -170,9 +233,9 @@ button:hover {
     background-color: rgba(0, 0, 0, 0.7);
     color: whitesmoke;
     font-family: Alegreya;
-    font-size: 3em;
+    font-size: 2em;
     height: 100vh;
-    width: 480px;
+    width: 75%;
     position: fixed;
     top: 0;
     right: 0;
@@ -180,6 +243,15 @@ button:hover {
     transform: translateY(-100%);
     transition: all 0.5s ease-in-out;
 }
+
+@media (min-width: 850px) {
+    .off-canvas-menu {
+        width: 480px;
+        font-size: 3em;
+    }
+}
+
+
 /*did something different - had the off-canvas menu drop down from the top. realised you could do this with setting translateY(-100%). */
 
 .menu-open {
@@ -246,12 +318,20 @@ footer {
     font-size: 1.2em;
     color: whitesmoke;
 }
+
+.social-icons {
+    padding-top: 1em;
+}
+.social-icons a svg {
+    height: 30px;
+    width: 30px;
+}
 /*styling the modal popup*/
 
-.modal-popup {
+/* .modal-popup {
     display: grid;
     grid-template-columns: 1fr 1fr;
-}
+} */
 
 fieldset {
     display: flex;
